--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -13,7 +13,7 @@ body {
   padding: 0;
   color: $text-color;
   font-family: $global-font-family;
-  line-height: 1.4;
+  line-height: 1.5;
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
@@ -22,12 +22,18 @@ body {
 }
 
 h1,
-h2,
+h2 {
+  margin: 0.5em 0 0.3em;
+  line-height: 1.3;
+  font-family: $header-font-family;
+  font-weight: bold;
+}
+
 h3,
 h4,
 h5,
 h6 {
-  margin: 2em 0 0.5em;
+  margin: 0.4em 0 0.3em;
   line-height: 1.2;
   font-family: $header-font-family;
   font-weight: bold;
