--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -72,10 +72,13 @@
     border-bottom: 1px solid $border-color;
   }
 
-  p,
+  p {
+    font-size: 0.65em;
+  }
+
   li,
   dl {
-    font-size: 0.85em;
+    font-size: 0.75em;
   }
 
   /* paragraph indents */
