--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -29,6 +29,13 @@ h2 {
   font-weight: bold;
 }
 
+h2, .archive__item-title {
+    margin: 1.5em 0 1em;
+    line-height: 1.3;
+    font-family: $header-font-family;
+    font-weight: bold;
+}
+
 h3,
 h4,
 h5,
@@ -46,6 +53,10 @@ h1 {
 
 h2 {
   font-size: $type-size-3;
+}
+
+h2, .archive__item-title {
+  font-size: 1.2em;
 }
 
 h3 {
@@ -71,6 +82,10 @@ small,
 
 p {
   margin-bottom: 1.2em;
+}
+
+p, .author__bio {
+    font-size: 0.75em;
 }
 
 u,
