--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -29,7 +29,7 @@ h2 {
   font-weight: bold;
 }
 
-h2, .archive__item-title {
+h2.archive__item-title {
     margin: 1.5em 0 1em;
     line-height: 1.3;
     font-family: $header-font-family;
@@ -55,7 +55,7 @@ h2 {
   font-size: $type-size-3;
 }
 
-h2, .archive__item-title {
+h2.archive__item-title {
   font-size: 1.2em;
 }
 
@@ -84,7 +84,7 @@ p {
   margin-bottom: 1.2em;
 }
 
-p, .author__bio {
+p.author__bio {
     font-size: 0.75em;
 }
 
