--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -68,7 +68,7 @@
 
 .page__content {
   h2 {
-    padding-bottom: 0.5em;
+    padding-bottom: 0.3em;
     border-bottom: 1px solid $border-color;
   }
 
@@ -92,6 +92,13 @@
         margin-top: -($indent-var);
       }
     }
+  }
+
+  ul > ul,
+  ol > ol,
+  ul > ol,
+  ol > ul {
+    font-size: 0.85em;
   }
 
   a:not(.btn) {
