--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -42,6 +42,7 @@ $type-size-5: 0.9em !default; // ~16px
 $type-size-6: 0.85em !default; // ~12px
 $type-size-7: 0.85em !default; // ~11px
 $type-size-8: 0.85em !default; // ~10px
+$code-size: 0.7em !default;
 
 /*
    Colors
