--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -129,13 +129,13 @@ abbr[data-original-title] {
 
 blockquote {
   margin: 1em 1em 0.5em 0;
-  padding-left: 1em;
+  padding-left: 0.8em;
   padding-right: 1em;
-  font-style: italic;
-  border-left: 0.25em solid $primary-color;
+  // font-style: italic;
+  border-left: 0.25em solid #f3ae2f;
 
   cite {
-    font-style: italic;
+    // font-style: italic;
 
     &:before {
       content: "\2014";
