--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -147,6 +147,9 @@ blockquote {
 /* links */
 
 a {
+  /* 하이퍼링크 밑줄 없애기 */
+  text-decoration: none;
+
   &:focus {
     @extend %tab-focus;
   }
@@ -158,6 +161,7 @@ a {
   &:hover {
     color: $link-color-hover;
     outline: 0;
+    text-decoration: underline;
   }
 }
 
