css: Add an item-title variable, reduce item-title font size

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -45,7 +45,7 @@ $type-size-6: 0.85em !default; // ~12px
 $type-size-7: 0.85em !default; // ~11px
 $type-size-8: 0.85em !default; // ~10px
 $code-size: 0.7em !default;
-
+$title-size: 0.8em !default;
 /*
    Colors
    ========================================================================== */
